[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-ssh-client"
version = "0.1.0"
description = "Python script to access AWS instance directories via SSH"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Abhishek Choudhary", email = "abc@abhishekchoudhary.net"},
]
classifiers = [
    "Development Status :: 4 - Beta",
]
dependencies = [
    "paramiko>=3.5.1",
    "cryptography>=41.0.0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
aws-ssh = "aws_ssh_client:main"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["aws_ssh_client"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true